[package]
name         = "rsgba"
version      = "0.1.0"
authors      = ["Evrey <evrey@hackish.codes>"]
description  = "GBArs is a GBA emulator written in Rust."
readme       = "README.md"
keywords     = ["emulator", "gba"]
license      = "Apache-2.0"

[dependencies]
clippy    = { version = "^0.0", optional = true }
log       = "^0.3"
argparse  = "^0.2"
byteorder = "^0.4"

[features]
default = []
